FstPlugin/src-gen/org/workcraft/plugins/fst/jj/DotGParser.java
/* DotGParser.java */
/* Generated By:JavaCC: Do not edit this line. DotGParser.java */
package org.workcraft.plugins.fst.jj;
import java.util.HashSet;
import java.util.HashMap;
import java.util.List;
import java.util.LinkedList;
import org.workcraft.dom.Node;
import org.workcraft.plugins.fsm.Event;
import org.workcraft.plugins.fsm.State;
import org.workcraft.plugins.fst.Fst;
import org.workcraft.plugins.fst.Signal;
import org.workcraft.plugins.fst.Signal.Type;
import org.workcraft.plugins.fst.SignalEvent;
import org.workcraft.plugins.fst.SignalEvent.Direction;
import org.workcraft.util.Pair;
import org.workcraft.exceptions.FormatException;

public class DotGParser implements DotGParserConstants {
    private HashMap < String, Type > signals;
    private HashSet < String > dummies;
    private Fst fst;

    private void init() {
        signals = new HashMap < String, Type > ();
        dummies = new HashSet < String > ();
        fst = new Fst();
    }

    private void addSignals(List < String > list, Type type) {
        for (String name : list) {
            if (signals.containsKey(name)) {
                Type oldType = signals.get(name);
                if (!oldType.equals(type)) {
                    throw new FormatException("The " + type + " signal '" + name
                        + "' was already listed as an " + oldType + " signal.");
                }
            } else {
                signals.put(name, type);
            }
        }
    }

  final public Fst parse() throws ParseException {
init();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LINEBREAK:
      case INPUT_HEADER:
      case OUTPUT_HEADER:
      case INTERNAL_HEADER:
      case DUMMY_HEADER:
      case UNSUPPORTED_HEADER:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      header();
      jj_consume_token(LINEBREAK);
    }
    graph();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MARKING:
      case UNSUPPORTED_HEADER:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      footer();
      jj_consume_token(LINEBREAK);
    }
    jj_consume_token(END);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ANY:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(ANY);
    }
    jj_consume_token(0);
{if ("" != null) return fst;}
    throw new Error("Missing return statement in function");
  }

  final public void header() throws ParseException {List < String > list;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LINEBREAK:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      jj_consume_token(LINEBREAK);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INPUT_HEADER:{
      jj_consume_token(INPUT_HEADER);
      list = stringList();
addSignals(list, Type.INPUT);
      break;
      }
    case OUTPUT_HEADER:{
      jj_consume_token(OUTPUT_HEADER);
      list = stringList();
addSignals(list, Type.OUTPUT);
      break;
      }
    case INTERNAL_HEADER:{
      jj_consume_token(INTERNAL_HEADER);
      list = stringList();
addSignals(list, Type.INTERNAL);
      break;
      }
    case DUMMY_HEADER:{
      jj_consume_token(DUMMY_HEADER);
      list = stringList();
addSignals(list, Type.DUMMY);
      break;
      }
    case UNSUPPORTED_HEADER:{
      jj_consume_token(UNSUPPORTED_HEADER);
      jj_consume_token(REST);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public List < String > stringList() throws ParseException {Token t;
    List < String > list = new LinkedList < String > ();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NAME:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      t = jj_consume_token(NAME);
list.add(t.image);
    }
{if ("" != null) return list;}
    throw new Error("Missing return statement in function");
  }

  final public void footer() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MARKING:{
      jj_consume_token(MARKING);
      marking();
      break;
      }
    case UNSUPPORTED_HEADER:{
      jj_consume_token(UNSUPPORTED_HEADER);
      jj_consume_token(REST);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void marking() throws ParseException {Token t;
    State state;
    jj_consume_token(18);
    t = jj_consume_token(NAME);
    jj_consume_token(19);
state = fst.getOrCreateState(t.image);
state.setInitial(true);
  }

  final public void graph() throws ParseException {
    jj_consume_token(STATE_GRAPH);
    jj_consume_token(LINEBREAK);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NAME:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      graphLine();
      jj_consume_token(LINEBREAK);
    }
  }

  final public void graphLine() throws ParseException {Token t;
    State fromState;
    Signal signal;
    Direction direction;
    SignalEvent signalEvent;
    State toState;
    t = jj_consume_token(NAME);
fromState = fst.getOrCreateState(t.image);
    label_7:
    while (true) {
      t = jj_consume_token(NAME);
Type type = signals.get(t.image);
                signal = fst.getOrCreateSignal(t.image, type);
                direction = Direction.TOGGLE;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIRECTION:{
        t = jj_consume_token(DIRECTION);
direction = Direction.fromString(t.image);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      t = jj_consume_token(NAME);
toState = fst.getOrCreateState(t.image);
signalEvent = fst.createSignalEvent(fromState, toState, signal);
            signalEvent.setDirection(direction);
            fromState = toState;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NAME:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_7;
      }
    }
  }

  /** Generated Token Manager. */
  public DotGParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[10];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x47c0,0x5000,0x10,0x40,0x4780,0x8000,0x5000,0x8000,0x10000,0x8000,};
   }

  /** Constructor with InputStream. */
  public DotGParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public DotGParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new DotGParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public DotGParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new DotGParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
      jj_input_stream = new SimpleCharStream(stream, 1, 1);
   } else {
      jj_input_stream.ReInit(stream, 1, 1);
   }
   if (token_source == null) {
      token_source = new DotGParserTokenManager(jj_input_stream);
   }

    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public DotGParser(DotGParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(DotGParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[25];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 10; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 25; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
